--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
         }
     },
     "scripts": {
+		"pre-update-cmd": "git clean -dfX",
         "post-update-cmd": "bash akani-composer.sh"
     }
 }
