--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,6 @@
     },
     "scripts": {
 		"pre-update-cmd": "git clean -dfX",
-        "post-update-cmd": "bash akani-composer.sh"
+        "post-update-cmd": "bash akani-composer.sh dbName dbUser dbPassword dbhost"
     }
 }
